# 2D-Rts-Game

./: .gitignore  README.md  launch_game.cmd  pyproject.toml  requirements.txt
assets/: ASSET_MANIFEST.json
data/: buildings.json  factions.json  resources.json  units.json  upgrades.json  waves.json
data/schemas/: buildings.schema.json  factions.schema.json  resources.schema.json  units.schema.json  upgrades.schema.json  waves.schema.json
sources/: README.md
src/house_of_wolves/: __init__.py  __main__.py
src/house_of_wolves/core/: __init__.py  app.py  assets.py  contracts.py  data.py  game_specs.py  geometry.py  keybindings.py  performance.py  profiler.py  renderer.py  runtime.py  serialization.py  settings.py  sprite_registry.py
src/house_of_wolves/entities/: __init__.py  base.py  building.py  captive.py  combat_effect.py  combat_unit.py  projectile.py  resource_node.py  unit.py  worker.py
src/house_of_wolves/systems/: __init__.py  ai.py  buildings.py  combat.py  command_payloads.py  commands.py  construction.py  economy.py  entity_helpers.py  farming.py  (+9 more)
tests/: test_assets.py  test_camera.py  test_combat.py  test_commands.py  test_construction.py  test_contracts.py  test_data_validation.py  test_demo_world.py  test_economy.py  test_farming.py  test_game_specs.py  test_group_movement.py  test_movement.py  test_performance.py  test_production.py  test_renderer.py  test_runtime.py  test_selection.py  test_smoke_imports.py  test_spatial_hash.py  test_terrain.py  test_towers.py  test_waves.py
tools/: process_building_sprites.py  process_resource_sprites.py
(+16 files in other folders)
